@@ -450,7 +450,8 @@ void RenderObject::drawBorder(QPainter *p, int x1, int y1, int x2, int y2,
     case DASHED:
         if(style == DASHED)
             p->setPen(QPen(c, width == 1 ? 0 : width, Qt::DashLine));
-        {
+
+        if (width > 0)
             switch(s)
             {
             case BSBottom:
@@ -462,7 +463,7 @@ void RenderObject::drawBorder(QPainter *p, int x1, int y1, int x2, int y2,
                 p->drawLine((x1+x2)/2, y1, (x1+x2)/2, y2);
                 break;
             }
-        }
+                
         break;
 
     case DOUBLE:
