@@ -1,3 +1,13 @@
+2003-02-18  David Hyatt  <hyatt@apple.com>
+
+	Fix for 3171795, dotted borders drawn incorrectly.  Picked this
+	gem up from the KHTML trunk.
+	
+        Reviewed by darin
+
+        * khtml/rendering/render_object.cpp:
+        (RenderObject::drawBorder):
+
 2003-02-17  Darin Adler  <darin@apple.com>
 
         Reviewed by Dave.
